[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes_and_scripts/Enemies/Enemy_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes_and_scripts/Enemies/Enemy_shooter_chaser.gd" type="Script" id=2]

[node name="Enemy_shooter_chaser" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Range" type="Area2D" parent="." index="4"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range" index="0"]

[node name="Timer_shoot" type="Timer" parent="." index="6"]

[node name="Weapon_pos" type="Position2D" parent="." index="7"]

[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
[connection signal="timeout" from="Timer_shoot" to="." method="_on_Timer_shoot_timeout"]
